# snake_tty

./: .gitignore  CMakeLists.txt  README.md  file.url
scripts/: build.sh  clear_build.sh  debug_build.sh  debug_run.sh  run.sh
src/: main.cpp
